--- a/g_drive_to_snowflake_data_migration.ipynb
+++ b/g_drive_to_snowflake_data_migration.ipynb
@@ -59,11 +59,11 @@
     "# 2. Define Snowflake connection using SQLAlchemy URL\n",
     "engine = create_engine(\n",
     "    URL(\n",
-    "        user='BRIJESH',\n",
-    "        password='Temp@115599',\n",
-    "        account='agb63276',\n",
+    "        user='---',\n",
+    "        password='----',\n",
+    "        account='----',\n",
     "        warehouse='COMPUTE_WH',\n",
-    "        database='SFN_TRAINING',\n",
+    "        database='----',\n",
     "        schema='MORTGAGE',\n",
     "        role='ACCOUNTADMIN'\n",
     "    )\n",
@@ -106,7 +106,7 @@
     "# === CONFIGURATION ===\n",
     "local_file = '/home/latitude/2022_public_lar_csv.csv'\n",
     "table_name = '\"/home/latitude/2022_public_lar\"'\n",
-    "database = 'SFN_TRAINING'\n",
+    "database = '----'\n",
     "schema = 'MORTGAGE'\n",
     "\n",
     "# === 1. Infer schema from CSV header (all VARCHAR) ===\n",
@@ -119,9 +119,9 @@
     "\n",
     "# === 2. Connect to Snowflake ===\n",
     "conn = snowflake.connector.connect(\n",
-    "    user='BRIJESH',\n",
-    "    password='Temp@115599',\n",
-    "    account='agb63276',\n",
+    "    user='----',\n",
+    "    password='----',\n",
+    "    account='----',\n",
     "    warehouse='COMPUTE_WH',\n",
     "    database=database,\n",
     "    schema=schema,\n",
