--- a/statistics_on_snowflake.ipynb
+++ b/statistics_on_snowflake.ipynb
@@ -51,11 +51,11 @@
     "\n",
     "# Connect to Snowflake\n",
     "conn = snowflake.connector.connect(\n",
-    "    user='tsethi',\n",
-    "    password='Tsethi@7654321',\n",
-    "    account='ml69805.us-east-1',\n",
-    "    warehouse='AI_MEDIUM',\n",
-    "    database='prod_tapintel',\n",
+    "    user='---',\n",
+    "    password='---',\n",
+    "    account='---',\n",
+    "    warehouse='---',\n",
+    "    database='---',\n",
     "    schema='public',\n",
     "    role='public'\n",
     ")\n",
